RESOLVED FIXED286398
AX: Make m_nodeObjectMapping a WeakHashMap to avoid WeakRef crashes
https://bugs.webkit.org/show_bug.cgi?id=286398
Summary AX: Make m_nodeObjectMapping a WeakHashMap to avoid WeakRef crashes
Tyler Wilcock
Reported 2025-01-22 19:30:48 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-22 19:30:59 PST
Tyler Wilcock
Comment 2 2025-01-22 19:42:19 PST
EWS
Comment 3 2025-01-23 08:30:26 PST
Committed 289293@main (52a7fd41f906): <https://commits.webkit.org/289293@main> Reviewed commits have been landed. Closing PR #39427 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.